styles.css
/* ... */
.poodllconvedit_control-panel .btn.add{
	display: flex;
	align-items: center;
	justify-content: center;
	background: #77DB7B;
	background-image: url([[pix:mod_solo|e/plus-icon]]);
	background-repeat: no-repeat;
	background-position: center;
	background-image: linear-gradient(59.59deg, #77DB7B 13.47%, #57DA54 86.53%), #00FF00 url([[pix:mod_solo|e/plus-icon]]) no-repeat center;
}
/*
.transcriptionpreviewplayer .btn.add:after{
    content: '';
    display: block;
    width: 12px;
    height: 12px;
    background-image: url([[pix:mod_solo|e/plus-icon]]);
    background-repeat: no-repeat;
    background-position: center;
    -webkit-background-size: 100%;
    background-size: 100%;
}
*/

.transcriptionpreviewplayer.player-audio {
	flex-direction: column;
}

.transcriptionpreviewplayer.player-audio .bottom-box {
	flex: 1;
}

.transcriptionpreviewplayer.player-audio .top-box {
	height: auto!important;
}

.transcriptionpreviewplayer.player-audio .top-box .poodllconvedit_video {
	display: none;
}

.transcriptionpreviewplayer.player-audio .top-box .text-box {
	border-radius: 5px 5px 0 0;
	margin-bottom: 0;
	transform: none;
	width: 100%;
}

.poodllconvedit_control-panel .preview-progress-bar,
.poodllconvedit_control-panel .progress-line {
	width: 100%;
}

.mod_solo_togglebuttongroup {
	z-index: 0;
}

.mod_solo_togglebuttongroup .usertoggleitem,
.mod_solo_togglebuttongroup .fonttoggleitem {
	display: block;
}
.mod_solo_togglebuttongroup .btn.btn-secondary.usertoggleitem.active,
.mod_solo_togglebuttongroup .btn.btn-secondary.fonttoggleitem.active {
	background-color: blue;
	color: white;
}


.mod_solo_grading_badword {
    /*
    color: red;
    background-color: #ffcaca;
    padding: 5px;
    border-radius: 5px 5px 5px;
    border: 1px solid red;
    position: relative;
    */
    text-decoration: underline #0000FF;
    font-weight: bold;
}

.mod_solo_grading_endspace {
    /*
    color: blue;
    background-color: #cacaff;
    padding: 5px;
    border-radius: 5px 5px 5px;
    border: 1px solid blue;
    position: relative;
    */
}

.mod_solo_grading_passagespace {
   /* padding: 2px; */
}

div.mod_solo_postattempt .mod_solo_grading_unreadword {
    text-decoration: none;
    background-color: lightgrey;
}

div.mod_solo_postattempt .mod_solo_grading_unreadspace {
    background-color: lightgrey;
    padding: 0px 2px;
}

.mod_solo_grading_unreadword {
    font-style: italic;
    text-decoration: underline;
}

.mod_solo_grading_passageword.mod_solo_aiunmatched {
    /*background-color: lightgrey;*/
}

.mod_solo_grading_passagespace.mod_solo_aiunmatched {
    /*background-color: lightgrey;*/
    text-decoration: underline #0000FF;
    font-weight: bold;
}
.mod_solo_overflow_auto {
	overflow: auto;
}

.mod_solo_progresschart {

	text-align: center;
	max-width: 800px;
	margin-top: 10px;
	border: 1px solid black;
	z-index: 100;
	background-color: white;
}

.mod_solo_activitycontent {
	/* text-align: center; */
	margin-bottom: 10px;
}

.mod_solo_activitycontent_image_cont,
.mod_solo_activitycontent_video_cont,
.mod_solo_activitycontent_audio_cont,
.mod_solo_activitycontent_tts_cont,
.mod_solo_activitycontent_iframe_cont {
	width: 100%;
	margin-top: 10px;
	/* text-align: center; */
}

.mod_solo_activitycontent_text {
	width: 100%;
	max-width: 400px;
	/* margin: auto; */
	/* text-align: center; */
}

.mod_solo_activitycontent_iframe_cont {
	margin-top: 10px;
	/* margin-left: auto; */
	/* margin-right: auto; */
	text-align: center;
	width: 100%;
	height: 100%;
	max-width: 400px;
	max-height: 225px;
}

.mod_solo_activitycontent_audio {
	width: 100%;
	max-width: 400px;
	margin: auto;
}
.mod_solo_activitycontent_video {
	width: 100%;
	max-width: 400px;
	margin: auto;
}
.mod_solo_activitycontent_image {
	width: 100%;
	max-width: 400px;
	margin: auto;
}



.mod_solo_activitycontent_iframe_responsive {
overflow:hidden;
padding-bottom:56.25%;
position:relative;
height:0;
margin: auto;
}


.mod_solo_activitycontent_iframe_responsive iframe {
left:0;
top:0;
height:100%;
width:100%;
position: absolute;
max-width: 400px;
max-height: 225px;
}

.mod_solo_summary_teachereval {
	flex-grow: 1;
	width: 100%;
}

.mod_solo_grammareval_label,
.mod_solo_spellingeval_label {
	text-align: center;
}
.mod_solo_grammarerror {
	background-color: beige;
}
.mod_solo_grammaradvice {
	font-style: italic;
}

audio#mod_solo_passageaudioplayer {
	width: 100%;
	max-width: 400px;
}
.mod_solo_rubric_results,
.mod_solo_teacherfeedback {
	text-align: center;
}
.mod_solo_summaryresults .mod_solo_nativeaudioplayer_cont {
	text-align: center;
}
.mod_solo_maybereloadaudio {
	font-style: italic;
}

.solo_actionbutton {
	margin: 5px;
	padding: 5px;
	text-align: center;
}

.solo_grading_nav {
	text-align: center;
}
.mod_solo_placeholdertext {
	text-align: center;
}
.mod_solo_myreports .mod_solo_listbuttons {
	text-align: center;
}
.mod_solo_attemptdetailscontainer {
	text-align: center;
}
.mod_solo_sr_details {
	font-style: italic;
	text-align: center;
}
.mod_solo_bigfont {
	font-size: 1.8em;
}
/* hide save button because users can try to leave too soon */
.mod_solo_step2 .btn.btn-primary {
	display: none;
}
.solo_grading_submissions_container {
	max-width: 1200px;
}

.solo_grading_submissions_container .mod_solo_nativeaudioplayer_cont {
	width: 100%;
}

